[package]
name = "chumsky-branch"
version = "0.2.0"
edition = "2021"
license = "MIT"

description = "branch combinator for the chumsky parsing library"
repository = "https://github.com/msrd0/chumsky-branch"
readme = "README.md"
include = ["/src/**/*.rs", "/LICENSE", "/README.md"]

[dependencies]
chumsky = "0.9"
